Se agrega el primer section

--- a/index.html
+++ b/index.html
@@ -70,5 +70,63 @@
         </div>
       </div>
     </div>
+    <div class=".bg-light color">
+      <section class="container py-5">
+        <h3 class="text-center pb-3 text-light">
+          Life is about Creating Experiences
+        </h3>
+        <p class="text-center text-light">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ab
+          molestiae doloremque, rem iure unde magni alias omnis quis quod.
+        </p>
+        <div class="row d-flex justify-content-around mt-5">
+          <div class="col-1 d-flex flex-column align-items-center p-0">
+            <img class="img filter-white" src="img/shutter.svg" />
+            <p class="text-center text-light">Lorem ipsum dolor sit.</p>
+          </div>
+          <div class="col-1 d-flex flex-column align-items-center p-0">
+            <img class="img filter-white" src="img/camera.svg" />
+            <p class="text-center text-light">Lorem ipsum dolor sit.</p>
+          </div>
+          <div class="col-1 d-flex flex-column align-items-center p-0">
+            <img class="img filter-white" src="img/add.svg" />
+            <p class="text-center text-light">Lorem ipsum dolor sit.</p>
+          </div>
+          <div class="col-1 d-flex flex-column align-items-center p-0">
+            <img class="img filter-white" src="img/gallery.svg" />
+            <p class="text-center text-light">Lorem ipsum dolor sit.</p>
+          </div>
+          <div class="col-1 d-flex flex-column align-items-center p-0">
+            <img class="img filter-white" src="img/move.svg" />
+            <p class="text-center text-light">Lorem ipsum dolor sit.</p>
+          </div>
+        </div>
+        <div
+          class="
+            container
+            mt-5
+            pt-5
+            d-flex
+            justify-content-center
+            position-relative
+          "
+        >
+          <img class="img-fluid fotografo2" src="img/fotografo-recorte.png" />
+          <div class="position-absolute" style="left: 20%; top: 25%">
+            <h4 class="text-light subtitulo-h4">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Voluptates repellat quia alias.
+            </h4>
+          </div>
+          <div class="position-absolute" style="right: 15%; bottom: -15%">
+            <p class="text-light texto">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
+              doloremque aut, itaque nisi maiores ullam eius repudiandae
+              perspiciatis incidunt consectetur.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
