--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-    <div class=".bg-light color">
+    <div class="color">
       <section class="container py-5">
         <h3 class="text-center pb-3 text-light">
           Life is about Creating Experiences
@@ -124,6 +124,62 @@
               doloremque aut, itaque nisi maiores ullam eius repudiandae
               perspiciatis incidunt consectetur.
             </p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="color-2 py-5">
+      <section class="container py-3">
+        <h3 class="text-center">Choose your best plan</h3>
+        <p class="text-center mt-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque optio
+          minus, neque itaque rerum quaerat.
+        </p>
+        <div class="d-flex justify-content-center my-5">
+          <div class="caja">
+            <div class="d-flex flex-column align-items-center">
+              <img class="img filter-green" src="img/camera.svg" />
+              <p class="text-center">Silver</p>
+              <p class="text-center text-success fs-3">$50.00</p>
+            </div>
+            <div class="d-flex flex-column align-items-center caja-inf">
+              <p class="text-center">Lorem ipsum dolor sit amet.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+              <p class="text-center">Lorem, ipsum.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <button class="boton">Get Started</button>
+            </div>
+          </div>
+          <div class="caja oferta">
+            <div class="d-flex flex-column align-items-center">
+              <img class="img filter-green" src="img/camera.svg" />
+              <p class="text-center">Gold</p>
+              <p class="text-center text-success fs-3">$50.00</p>
+            </div>
+            <div class="d-flex flex-column align-items-center caja-inf">
+              <p class="text-center">Lorem ipsum dolor sit amet.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+              <p class="text-center">Lorem, ipsum.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <button class="boton boton--oferta">Get Started</button>
+            </div>
+          </div>
+          <div class="caja">
+            <div class="d-flex flex-column align-items-center">
+              <img class="img filter-green" src="img/camera.svg" />
+              <p class="text-center">Platinum</p>
+              <p class="text-center text-success fs-3">$50.00</p>
+            </div>
+            <div class="d-flex flex-column align-items-center caja-inf">
+              <p class="text-center">Lorem ipsum dolor sit amet.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
+              <p class="text-center">Lorem, ipsum.</p>
+              <p class="text-center">Lorem ipsum dolor sit.</p>
+              <button class="boton">Get Started</button>
+            </div>
           </div>
         </div>
       </section>
