Se corrige enlace del nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link text-light" href="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="">About</a>
+            <a class="nav-link text-light" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="">Portfolio</a>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="color">
-      <section class="container py-5">
+      <section class="container py-5" id="about">
         <h3 class="text-center pb-3 text-light">
           Life is about Creating Experiences
         </h3>
