Se agrega footer y section
Se agrega el footer y una seccion mas a la pagina, con sus respectivos estilos.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div
           class="
             container
-            mt-5
+            mt-3
             pt-5
             d-flex
             justify-content-center
@@ -118,7 +118,7 @@
               Voluptates repellat quia alias.
             </h4>
           </div>
-          <div class="position-absolute" style="right: 15%; bottom: -15%">
+          <div class="position-absolute" style="right: 15%; bottom: -10%">
             <p class="text-light texto">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
               doloremque aut, itaque nisi maiores ullam eius repudiandae
@@ -155,7 +155,7 @@
             <div class="d-flex flex-column align-items-center">
               <img class="img filter-green" src="img/camera.svg" />
               <p class="text-center">Gold</p>
-              <p class="text-center text-success fs-3">$50.00</p>
+              <p class="text-center text-success fs-3">$100.00</p>
             </div>
             <div class="d-flex flex-column align-items-center caja-inf">
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -170,7 +170,7 @@
             <div class="d-flex flex-column align-items-center">
               <img class="img filter-green" src="img/camera.svg" />
               <p class="text-center">Platinum</p>
-              <p class="text-center text-success fs-3">$50.00</p>
+              <p class="text-center text-success fs-3">$400.00</p>
             </div>
             <div class="d-flex flex-column align-items-center caja-inf">
               <p class="text-center">Lorem ipsum dolor sit amet.</p>
@@ -184,5 +184,69 @@
         </div>
       </section>
     </div>
+    <div class="color-2">
+      <section class="container">
+        <div class="d-flex justify-content-center">
+          <img class="rounded" src="img/fotografo.jpg">
+          <div class="d-flex flex-column align-self-end">
+            <h3>Memories that Last Forever</h3>
+            <div class="d-flex flex-column justify-content-around">
+              <div>
+                <h4>Tons of Premade Sections</h4>
+                <p class="texto-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, reprehenderit ullam!</p>
+              </div>
+              <div>
+                <h4>Complete CMS integration</h4>
+                <p class="texto-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur dolor et iste saepe!</p>
+              </div>
+              <div>
+                <h4>Stellar after-sales support</h4>
+                <p class="texto-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolore qui voluptas eos quo repellat veritatis autem!</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="container pt-5 pb-3">
+        <div class="d-flex flex-row justify-content-around pb-3">
+          <h4 class="fs-2">Dark Room Studios</h4>
+          <div class="d-flex justify-content-around">
+            <div class="px-5">
+              <h4>SERVICES</h4>
+              <ul class="ps-0">
+                <li class="item-lista">Video</li>
+                <li class="item-lista">Photography</li>
+                <li class="item-lista">All Services</li>
+              </ul>
+            </div>
+            <div class="px-5">
+              <h4>OUR PAGES</h4>
+              <ul class="ps-0">
+                <li class="item-lista">About</li>
+                <li class="item-lista">Portfolio</li>
+                <li class="item-lista">Blog</li>
+                <li class="item-lista">Contact</li>
+              </ul>
+            </div>
+            <div class="px-5">
+              <h4>CONTACT US</h4>
+              <ul class="ps-0">
+                <li class="item-lista">Direccion</li>
+                <li class="item-lista">Telefono</li>
+                <li class="item-lista">Mail</li>
+              </ul>
+              <div class="d-flex justify-content-between">
+                <a href="https://instragram.com" target="_blank"><img class="filter-white" src="img/instagram.svg"></a>
+                <a href="https://linkedin.com" target="_blank"><img class="filter-white" src="img/linkedin.svg"></a>
+                <a href="https://whatsapp.com" target="_blank"><img class="filter-white" src="img/whatsapp.svg"></a>
+              </div>
+            </div>
+          </div>
+      </div>
+      <p class="m-0 text-center">Copyright to Dark Room Studios. Page made by <b>Neimann Kenneth</b>.</p>
+    </footer>
   </body>
 </html>
