Se agrega favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark Room Studios</title>
+    <link rel="icon" type="image/png" href="img/Icon.png"/>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -185,7 +186,7 @@
       </section>
     </div>
     <div class="color-2">
-      <section class="container">
+      <section class="container pt-5">
         <div class="d-flex justify-content-center">
           <img class="rounded" src="img/fotografo.jpg">
           <div class="d-flex flex-column align-self-end">
@@ -247,6 +248,6 @@
           </div>
       </div>
       <p class="m-0 text-center">Copyright to Dark Room Studios. Page made by <b>Neimann Kenneth</b>.</p>
-    </footer>
+    </footer>    
   </body>
 </html>
